<resources>
    <string name="app_name">WineApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name: </string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="goBack">Go Back</string>
    <string name="enterPassword">Please enter a password</string>
    <string name="enterUsername">Please enter your username</string>
    <string name="failedLogin">Invalid username or password</string>
    <string name="failedRegister">Error creating an account</string>
    <string name="title_activity_view_menu">ViewMenuActivity</string>
    <string name="title_activity_view_menu_activity_adapter">ViewMenuActivityAdapter</string>
    <string name="title_activity_order_menu">OrderMenuActivity</string>
    <string name="title_activity_order_items">OrderItemsActivity</string>
    <string name="action_sign_in">Login</string>
    <string name="my_current_orders">Current Orders</string>
    <string name="my_past_orders">Past Orders</string>
</resources>
